[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MenuScripts/BackButton.gd" type="Script" id=1]
[ext_resource path="res://Resources/Characters/Humans/tiles/helmets.png" type="Texture" id=2]
[ext_resource path="res://Resources/Characters/Humans/tiles/faces.png" type="Texture" id=3]
[ext_resource path="res://Resources/Characters/Humans/tiles/Bodies.png" type="Texture" id=4]
[ext_resource path="res://Scripts/SkinSelector.gd" type="Script" id=5]
[ext_resource path="res://Scripts/CharacterSkin.gd" type="Script" id=6]
[ext_resource path="res://Scripts/MenuScripts/SkinSelectorButton.gd" type="Script" id=7]

[node name="SkinSelector" type="Node2D"]
script = ExtResource( 5 )

[node name="MenuContainer" type="VBoxContainer" parent="."]
margin_left = 396.0
margin_top = 3.0
margin_right = 640.0
margin_bottom = 186.0

[node name="BackButton" type="Button" parent="MenuContainer"]
margin_right = 244.0
margin_bottom = 20.0
text = "Back to menu"
script = ExtResource( 1 )

[node name="SkinSelectorButton" type="Button" parent="MenuContainer"]
margin_top = 24.0
margin_right = 244.0
margin_bottom = 44.0
text = "Go to Skin Selector"
script = ExtResource( 7 )

[node name="SelectContainer" type="VBoxContainer" parent="."]
margin_left = 541.0
margin_top = 202.0
margin_right = 946.0
margin_bottom = 443.0

[node name="Label" type="Label" parent="SelectContainer"]
margin_right = 405.0
margin_bottom = 14.0
text = "Name:"

[node name="NameLine" type="LineEdit" parent="SelectContainer"]
margin_top = 18.0
margin_right = 405.0
margin_bottom = 42.0
size_flags_stretch_ratio = 0.5
placeholder_text = "Name..."

[node name="HelmButton" type="Button" parent="SelectContainer"]
margin_top = 46.0
margin_right = 405.0
margin_bottom = 66.0
text = "Helm"

[node name="FaceButton" type="Button" parent="SelectContainer"]
margin_top = 70.0
margin_right = 405.0
margin_bottom = 90.0
text = "Face"

[node name="BodyButton" type="Button" parent="SelectContainer"]
margin_top = 94.0
margin_right = 405.0
margin_bottom = 114.0
text = "Body"

[node name="CreateButton" type="Button" parent="SelectContainer"]
margin_top = 118.0
margin_right = 405.0
margin_bottom = 138.0
text = "Create"

[node name="CharacterSkin" type="KinematicBody2D" parent="."]
position = Vector2( 255, 40 )
scale = Vector2( 3, 3 )
script = ExtResource( 6 )

[node name="Helm" type="Sprite" parent="CharacterSkin"]
position = Vector2( 0, 33 )
texture = ExtResource( 2 )
hframes = 3

[node name="Face" type="Sprite" parent="CharacterSkin"]
position = Vector2( 0, 41 )
z_index = -1
texture = ExtResource( 3 )
hframes = 3

[node name="Body" type="Sprite" parent="CharacterSkin"]
position = Vector2( 0, 72 )
texture = ExtResource( 4 )
hframes = 3

[connection signal="pressed" from="MenuContainer/BackButton" to="MenuContainer/BackButton" method="_on_BackButton_pressed"]
[connection signal="pressed" from="MenuContainer/SkinSelectorButton" to="MenuContainer/SkinSelectorButton" method="_on_SkinSelectorButton_pressed"]
[connection signal="pressed" from="SelectContainer/HelmButton" to="." method="_on_HelmButton_pressed"]
[connection signal="pressed" from="SelectContainer/FaceButton" to="." method="_on_FaceButton_pressed"]
[connection signal="pressed" from="SelectContainer/BodyButton" to="." method="_on_BodyButton_pressed"]
[connection signal="pressed" from="SelectContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
